Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-376

QTextStream & QDataStream do not report write errors

    XMLWordPrintable

Details

    • 9233143bb25e33c07f73b7d35b0d6cbd14ef1686, 135a6e32522775b182e870130eb12502753c913c

    Description

      QTextStream and QDataStream do not report write errors with the status() function, only read errors. It would be nice if it was possible to detect write problems as well.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            buddenha Oswald Buddenhagen
            admin Administrator
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes