add write error handling to QDataStream

add new status flag WriteFailed.
use it in all write functions.

Task-number: QTBUG-376
Reviewed-by: mariusSO